--- a/Vagrantfile.in
+++ b/Vagrantfile.in
@@ -30,6 +30,9 @@ Vagrant.configure(2) do |config|
     end
   end
 
+  # Spinning up boxes on OSX is slow, wait up to 15 minutes.
+  config.vm.boot_timeout = 900
+
   config.vm.network "private_network", type: "dhcp"
 
   config.vm.provider "virtualbox" do |vb|
