--- a/Vagrantfile.in
+++ b/Vagrantfile.in
@@ -21,11 +21,29 @@ Vagrant.configure(2) do |config|
     iridium32bit.vm.provision "shell", path: "scripts/windows/110_build_msi_installer.cmd", args: "x86"
   end
 
+  config.vm.define "iridium-64bit" do |iridium64bit|
+    # Configuration to build 64bit version of iridium.
+
+    iridium64bit.vm.box = "opentable/win-8.1-core-amd64-nocm"
+
+    iridium64bit.vm.provision "shell", path: "scripts/windows/000_setup_powershell.cmd", args: "x64"
+    iridium64bit.vm.provision "shell", path: "scripts/windows/001_disable_services.cmd", args: "x64"
+    iridium64bit.vm.provision "shell", path: "scripts/windows/010_install_visual_studio.cmd", args: "x64"
+    iridium64bit.vm.provision "shell", path: "scripts/windows/020_install_depot_tools.cmd", args: "x64"
+    iridium64bit.vm.provision "shell", path: "scripts/windows/021_check_depot_tools.cmd", args: "x64"
+    iridium64bit.vm.provision "shell", path: "scripts/windows/040_initialize_gclient.cmd", args: "x64"
+    iridium64bit.vm.provision "shell", path: "scripts/windows/060_sync_code.cmd", args: "x64"
+    iridium64bit.vm.provision "shell", path: "scripts/windows/070_apply_patches.cmd", args: "x64"
+    iridium64bit.vm.provision "shell", path: "scripts/windows/080_runhooks.cmd", args: "x64"
+    iridium64bit.vm.provision "shell", path: "scripts/windows/100_compile_release.cmd", args: "x64"
+    iridium64bit.vm.provision "shell", path: "scripts/windows/110_build_msi_installer.cmd", args: "x64"
+  end
+
   # Spinning up boxes on OSX is slow, wait up to 15 minutes.
   config.vm.boot_timeout = 900
 
   # Wait for winrm responses for up to 2 hours.
-  config.winrm.timeout = 120*60
+  config.winrm.timeout = 2*60*60
 
   config.vm.provider "virtualbox" do |vb|
     # Display the VirtualBox GUI when booting the machine.
