--- a/Vagrantfile.in
+++ b/Vagrantfile.in
@@ -42,8 +42,9 @@ Vagrant.configure(2) do |config|
   # Spinning up boxes on OSX is slow, wait up to 15 minutes.
   config.vm.boot_timeout = 900
 
-  # Wait for winrm responses for up to 2 hours.
-  config.winrm.timeout = 2*60*60
+  # Checking out the Chromium code takes a really long time, increase winrm
+  # timeout to 24 hours which should be enough for all cases.
+  config.winrm.timeout = 24*60*60
 
   config.vm.provider "virtualbox" do |vb|
     # Display the VirtualBox GUI when booting the machine.
